fix html organization and css styling for spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,74 @@
-h1 {
+
+div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.header{
+  font-size: 60px;
+  margin-top: 20px;
+}
+
+#scoreandtimer {
+  justify-content: space-evenly;
+  margin-top: 30px;
+}
+
+#resetbutton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0px 20px;
+
+}
+
+#categoryimages {
+display: flex;
+justify-content: center;
+align-items: baseline;
+justify-content: space-evenly;
+margin-top: 150px;
+/* row-gap: 30px; */
+}
+
+#categorybuttons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 200px ;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* h1 {
   display: flex;
   justify-content: center;
   font-size: 50px ;
   /* text-align: center; */
-}
+/* }
 
 .container {
   display: flex;
@@ -16,7 +81,12 @@ h1 {
 
 }
 
-
+.categorybuttons {
+  display: flex;
+  justify-content: center;
+  justify-content: space-evenly;
+}
+ */
 
 
 
@@ -186,5 +256,4 @@ div {
 #resetbutton {
   background-color: snow;
   cursor: pointer;
-
-} */
+}
